--- a/ajax.html
+++ b/ajax.html
@@ -32,28 +32,28 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const nameElement = document.querySelector('#name');
-            const usernameElement = document.querySelector('username');
-            const avatarElement = document.querySelector('#avatar');
-            const reposElement = document.querySelector('#repos');
-            const followersElement = document.querySelector('#followers');
-            const followingElement = document.querySelector('#following')
-            const linkElement = document.querySelector('#link');
+    const nameElement = document.querySelector('#name');
+    const usernameElement = document.querySelector('#username'); // Corrigido
+    const avatarElement = document.querySelector('#avatar');
+    const reposElement = document.querySelector('#repos');
+    const followersElement = document.querySelector('#followers');
+    const followingElement = document.querySelector('#following');
+    const linkElement = document.querySelector('#link');
 
-            fetch('https://api.github.com/users/opedrogarcia')
-            .then(function(res) {
-                return res.json();
-            })
-            .then(function(json) {
-                nameElement.innerText = json.name;
-                usernameElement.innerText = json.login;
-                avatarElement.src = json.avatar_url;
-                followingElement.innerText = json.following;
-                followersElement.innerText = json.followers;
-                repos.innerText = json.public_repos;
-                linkElement.href = json.html_url;
-            })
-        })
+    fetch('https://api.github.com/users/PedroGS13876')
+    .then(function(res) {
+        return res.json();
+    })
+    .then(function(json) {
+        nameElement.innerText = json.name;
+        usernameElement.innerText = json.login; // Agora vai funcionar corretamente
+        avatarElement.src = json.avatar_url;
+        followingElement.innerText = json.following;
+        followersElement.innerText = json.followers;
+        reposElement.innerText = json.public_repos;
+        linkElement.href = json.html_url;
+    })
+})
     </script>
 </body>
 </html>
